fix: layout shift on ranged datepicker

--- a/components/datepicker/src/styles/snowflake/style.scss
+++ b/components/datepicker/src/styles/snowflake/style.scss
@@ -2,6 +2,7 @@
 
 .accents {
   flex-grow: 0;
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,8 +12,7 @@
   }
 
   &.right {
-    padding-left: var(--ds-size-100, vac.$ds-size-100);
-    width: var(--ds-size-300, vac.$ds-size-300);;
+    width: var(--ds-size-400, vac.$ds-size-400);
   }
 }
 
